--- a/cargo.toml
+++ b/cargo.toml
@@ -1,4 +1,7 @@
 [workspace]
 members = [
-    "zero2prod"
+    "zero2prod",
+    "rust_the_book",
+    "first_serversetup",
+    "microsoft_learning/hello_world"
 ]
